recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:5: error: identifier expected but ')' found.
    gauche(90.)
              ^